# sockaddrutil

./: CMakeLists.txt  LICENSE  README.md
src/: sockaddrutil.c
test/: CMakeLists.txt  ctest.h  sockaddr_test.c
